--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dev_dependencies:
   flutter_plugin_pdf_viewer: ^1.0.7
   path_provider: ^1.3.0
 
+  # UI
+  oktoast: ^2.2.0
+  pull_to_refresh: ^1.5.6
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
