--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,23 +27,25 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  #网络请求
+  # 网络请求
   dio: ^2.1.2
-  #本地存储
+  # 本地存储
   shared_preferences: ^0.5.2
-  #状态管理
+  # 本地json对象存储
+  localstorage: ^2.0.0
+  # 状态管理
   provider: ^3.0.0+1
-  #加密
+  # 加密
   encrypt: ^3.2.0
-  #打开文件，android更新下载安装包用
+  # 打开文件，android更新下载安装包用
   open_file: ^2.0.3
-  #flare动画
+  # flare动画
   flare_flutter: ^1.5.5
-  #打开web页面
+  # 打开web页面
   flutter_webview_plugin: ^0.3.8
-  #事件模拟，订阅发布
+  # 事件模拟，订阅发布
   event_bus: ^1.1.0
-  #路由
+  # 路由
   fluro: ^1.5.1
   flutter_plugin_pdf_viewer: ^1.0.7
   path_provider: ^1.3.0
@@ -67,6 +69,7 @@ flutter:
   assets:
     - assets/images/bAvqIeblkajqaqA.jpg
     - assets/images/0069lnCQly1fi6knj5e8xj30xc0ma75u.jpg
+    - assets/images/006i7H6Hgy1fjyd32bpqhj319c1w0kjm.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
