--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,12 +27,28 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  # Base Component
+  # WebView iOS添加键值对 o.flutter.embedded_views_preview = YES
+  webview_flutter: ^0.3.13
+  device_info: ^0.4.0+1
+  package_info: ^0.4.0+6
+  quiver: ^2.0.5
+  #  connectivity: ^0.4.3+6
   # 网络请求
-  dio: ^2.1.2
+  dio: 3.0.1
+  dio_cookie_manager: ^1.0.0
+  cookie_jar: ^1.0.0
   # 本地存储
   shared_preferences: ^0.5.2
   # 本地json对象存储
   localstorage: ^2.0.0
+
+  # Html Encoder/Decoder
+  html_unescape: ^1.0.1+3
+  # 解析html标签
+  flutter_html: ^0.10.4
+
   # 状态管理
   provider: ^3.0.0+1
   # 加密
