--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,11 @@ dev_dependencies:
   # UI
   oktoast: ^2.2.0
   pull_to_refresh: ^1.5.6
+  # 类iOS侧滑菜单
+  flutter_slidable: 0.5.3
+  # 谁用谁闪亮
+  shimmer: ^1.0.0
+  cached_network_image: ^1.1.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
